staff dashboard set
